--- a/TutorDot_iOS_1/TutorDot_iOS/Resource/Nibs/AlertTableViewCell.xib
+++ b/TutorDot_iOS_1/TutorDot_iOS/Resource/Nibs/AlertTableViewCell.xib
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -66,6 +67,7 @@
                     <constraint firstItem="a69-Iz-YQD" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="gQw-Yl-jE8"/>
                 </constraints>
             </tableViewCellContentView>
+            <color key="backgroundColor" name="journalColor"/>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="cellView" destination="a69-Iz-YQD" id="vyK-Y7-ay9"/>
@@ -77,4 +79,9 @@
             <point key="canvasLocation" x="137.68115942028987" y="115.84821428571428"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <namedColor name="journalColor">
+            <color red="0.97254901960784312" green="0.97254901960784312" blue="0.97254901960784312" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
