--- a/TutorDot_iOS_1/TutorDot_iOS/Resource/Nibs/BlankClassJournalCell.xib
+++ b/TutorDot_iOS_1/TutorDot_iOS/Resource/Nibs/BlankClassJournalCell.xib
@@ -45,14 +45,14 @@
                     <constraint firstItem="zyB-Fo-ZrI" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="200" id="rF1-Yk-oVO"/>
                 </constraints>
             </tableViewCellContentView>
-            <color key="backgroundColor" name="ColorBackgorund"/>
+            <color key="backgroundColor" name="journalColor"/>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <point key="canvasLocation" x="139" y="127"/>
         </tableViewCell>
     </objects>
     <resources>
-        <namedColor name="ColorBackgorund">
-            <color red="0.96078431372549022" green="0.96470588235294119" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <namedColor name="journalColor">
+            <color red="0.97254901960784312" green="0.97254901960784312" blue="0.97254901960784312" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
