--- a/TutorDot_iOS_1/TutorDot_iOS/Resource/Nibs/BlankMyClassCell.xib
+++ b/TutorDot_iOS_1/TutorDot_iOS/Resource/Nibs/BlankMyClassCell.xib
@@ -41,6 +41,7 @@
                     </view>
                 </subviews>
             </view>
+            <color key="backgroundColor" name="journalColor"/>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="LYy-34-fD9" secondAttribute="bottom" id="c60-Ca-09v"/>
                 <constraint firstAttribute="trailing" secondItem="LYy-34-fD9" secondAttribute="trailing" id="kEt-Iz-fav"/>
@@ -55,6 +56,9 @@
     <resources>
         <namedColor name="ColorBackgorund">
             <color red="0.96078431372549022" green="0.96470588235294119" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="journalColor">
+            <color red="0.97254901960784312" green="0.97254901960784312" blue="0.97254901960784312" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
