--- a/TutorDot_iOS_1/TutorDot_iOS/Resource/Storyboards/Login.storyboard
+++ b/TutorDot_iOS_1/TutorDot_iOS/Resource/Storyboards/Login.storyboard
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="q2Q-aw-xjB">
-<<<<<<< HEAD
-    <device id="retina5_9" orientation="portrait" appearance="light"/>
-=======
     <device id="retina4_7" orientation="portrait" appearance="light"/>
->>>>>>> 40820bac952e944a040e63b03d01ecc784a0d990
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -16,27 +12,27 @@
             <objects>
                 <viewController storyboardIdentifier="SignUpVC" id="hwN-nk-fcn" customClass="SignUpVC" customModule="TutorDot_iOS" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Z3g-EF-ftv">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="loginImgTutor" translatesAutoresizingMaskIntoConstraints="NO" id="rNI-gH-Q1z">
-                                <rect key="frame" x="134.66666666666666" y="102" width="106" height="27"/>
+                                <rect key="frame" x="134.5" y="58" width="106" height="27"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="27" id="fBq-Fu-LOs"/>
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="-30" translatesAutoresizingMaskIntoConstraints="NO" id="cGI-HZ-OHE">
-                                <rect key="frame" x="0.0" y="202" width="375" height="177"/>
+                                <rect key="frame" x="0.0" y="158" width="375" height="110"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cNU-Kd-hZt">
-                                        <rect key="frame" x="0.0" y="0.0" width="202.66666666666666" height="177"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="202.5" height="110"/>
                                         <state key="normal" image="signupBtnTutorUnpick"/>
                                         <connections>
                                             <action selector="isTutorSelected:" destination="hwN-nk-fcn" eventType="touchUpInside" id="7BP-2y-lgB"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J3G-xj-ODF">
-                                        <rect key="frame" x="172.66666666666663" y="0.0" width="202.33333333333337" height="177"/>
+                                        <rect key="frame" x="172.5" y="0.0" width="202.5" height="110"/>
                                         <state key="normal" image="signupBtnTuteeUnpick"/>
                                         <connections>
                                             <action selector="isTuteeSelected:" destination="hwN-nk-fcn" eventType="touchUpInside" id="fPp-0O-AJw"/>
@@ -48,7 +44,7 @@
                                 </constraints>
                             </stackView>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="이름" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0j2-8H-VPH">
-                                <rect key="frame" x="41" y="419" width="293" height="38"/>
+                                <rect key="frame" x="41" y="308" width="293" height="38"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="38" id="ytg-Tt-Vbl"/>
                                 </constraints>
@@ -56,22 +52,22 @@
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="이메일" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BDK-bu-JZ1">
-                                <rect key="frame" x="41" y="467" width="293" height="38"/>
+                                <rect key="frame" x="41" y="356" width="293" height="38"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="비밀번호" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FC6-H1-abi">
-                                <rect key="frame" x="41" y="515" width="293" height="38"/>
+                                <rect key="frame" x="41" y="404" width="293" height="38"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" secureTextEntry="YES"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="비밀번호 확인" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zYI-hp-Y2P">
-                                <rect key="frame" x="41" y="563" width="293" height="38"/>
+                                <rect key="frame" x="41" y="452" width="293" height="38"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" secureTextEntry="YES"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이용약관 및 개인정보보호정책에 동의합니다." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aJT-H9-aFY">
-                                <rect key="frame" x="76.999999999999986" y="643" width="245.66666666666663" height="21"/>
+                                <rect key="frame" x="77" y="532" width="245.5" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="5VB-JB-8xl"/>
                                 </constraints>
@@ -80,14 +76,14 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vvw-Z8-tze">
-                                <rect key="frame" x="53" y="642.66666666666663" width="14" height="22"/>
+                                <rect key="frame" x="53" y="531.5" width="14" height="22"/>
                                 <state key="normal" image="signupBtnAgreeUnpick"/>
                                 <connections>
                                     <action selector="checkBoxSelected:" destination="hwN-nk-fcn" eventType="touchUpInside" id="Y4U-Wf-zAY"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sbp-t1-LDM">
-                                <rect key="frame" x="36" y="694" width="303" height="48"/>
+                                <rect key="frame" x="36" y="583" width="303" height="48"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="303" id="QvT-YH-ARn"/>
                                     <constraint firstAttribute="height" constant="48" id="dh8-L2-i6N"/>
@@ -166,20 +162,20 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="loginImgTutor" translatesAutoresizingMaskIntoConstraints="NO" id="eSQ-cf-8xx">
-                                <rect key="frame" x="134.66666666666666" y="143" width="106" height="27"/>
+                                <rect key="frame" x="134.5" y="99" width="106" height="27"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="106" id="Z73-xc-gW0"/>
                                     <constraint firstAttribute="height" constant="27" id="u9M-TQ-LC1"/>
                                 </constraints>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="loginImgOnboardMockup" translatesAutoresizingMaskIntoConstraints="NO" id="iIW-xs-9xo">
-                                <rect key="frame" x="16" y="185" width="343" height="288"/>
+                                <rect key="frame" x="16" y="141" width="343" height="221"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="221" id="hJj-Fz-ReC"/>
                                 </constraints>
                             </imageView>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="이메일" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LaN-1H-Tw9">
-                                <rect key="frame" x="41" y="516" width="293" height="38"/>
+                                <rect key="frame" x="41" y="405" width="293" height="38"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="38" id="3Hf-hU-CcG"/>
                                 </constraints>
@@ -187,7 +183,7 @@
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="비밀번호" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1HB-bJ-MHY">
-                                <rect key="frame" x="41" y="564" width="293" height="38"/>
+                                <rect key="frame" x="41" y="453" width="293" height="38"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="38" id="kxZ-MA-hVv"/>
                                 </constraints>
@@ -195,7 +191,7 @@
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" secureTextEntry="YES"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y1c-vH-2g0">
-                                <rect key="frame" x="36" y="674" width="303" height="48"/>
+                                <rect key="frame" x="36" y="563" width="303" height="48"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="48" id="IHD-tT-PqB"/>
                                     <constraint firstAttribute="width" constant="303" id="kcd-7I-VvF"/>
@@ -210,7 +206,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="로그인 상태를 유지하시겠습니까?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PmM-23-1tU">
-                                <rect key="frame" x="108.66666666666667" y="630" width="184.33333333333331" height="17"/>
+                                <rect key="frame" x="108.5" y="519" width="184.5" height="17"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="17" id="N5o-vi-inj"/>
                                 </constraints>
@@ -219,7 +215,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ibU-0v-bX8" customClass="BEMCheckBox">
-                                <rect key="frame" x="78.666666666666671" y="631" width="15" height="15"/>
+                                <rect key="frame" x="78.5" y="520" width="15" height="15"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="15" id="2mI-Hu-Ytv"/>
@@ -271,7 +267,7 @@
     <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
     <resources>
         <image name="loginImgOnboardMockup" width="276" height="175"/>
-        <image name="loginImgTutor" width="106" height="27.333333969116211"/>
+        <image name="loginImgTutor" width="106" height="27.5"/>
         <image name="signupBtnAgreeUnpick" width="14" height="14"/>
         <image name="signupBtnTuteeUnpick" width="136" height="175"/>
         <image name="signupBtnTutorUnpick" width="136" height="175"/>
