--- a/TutorDot_iOS_1/TutorDot_iOS/Resource/Storyboards/Login.storyboard
+++ b/TutorDot_iOS_1/TutorDot_iOS/Resource/Storyboards/Login.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="q2Q-aw-xjB">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="hwN-nk-fcn">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
@@ -22,17 +22,17 @@
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="-30" translatesAutoresizingMaskIntoConstraints="NO" id="cGI-HZ-OHE">
-                                <rect key="frame" x="0.0" y="158" width="375" height="110"/>
+                                <rect key="frame" x="0.0" y="158" width="375" height="175"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cNU-Kd-hZt">
-                                        <rect key="frame" x="0.0" y="0.0" width="202.5" height="110"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="202.5" height="175"/>
                                         <state key="normal" image="signupBtnTutorUnpick"/>
                                         <connections>
                                             <action selector="isTutorSelected:" destination="hwN-nk-fcn" eventType="touchUpInside" id="7BP-2y-lgB"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J3G-xj-ODF">
-                                        <rect key="frame" x="172.5" y="0.0" width="202.5" height="110"/>
+                                        <rect key="frame" x="172.5" y="0.0" width="202.5" height="175"/>
                                         <state key="normal" image="signupBtnTuteeUnpick"/>
                                         <connections>
                                             <action selector="isTuteeSelected:" destination="hwN-nk-fcn" eventType="touchUpInside" id="fPp-0O-AJw"/>
@@ -44,7 +44,7 @@
                                 </constraints>
                             </stackView>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="이름" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0j2-8H-VPH">
-                                <rect key="frame" x="41" y="308" width="293" height="38"/>
+                                <rect key="frame" x="41" y="373" width="293" height="38"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="38" id="ytg-Tt-Vbl"/>
                                 </constraints>
@@ -52,22 +52,22 @@
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="이메일" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BDK-bu-JZ1">
-                                <rect key="frame" x="41" y="356" width="293" height="38"/>
+                                <rect key="frame" x="41" y="421" width="293" height="38"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="비밀번호" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FC6-H1-abi">
-                                <rect key="frame" x="41" y="404" width="293" height="38"/>
+                                <rect key="frame" x="41" y="469" width="293" height="38"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" secureTextEntry="YES"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="비밀번호 확인" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zYI-hp-Y2P">
-                                <rect key="frame" x="41" y="452" width="293" height="38"/>
+                                <rect key="frame" x="41" y="517" width="293" height="38"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" secureTextEntry="YES"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이용약관 및 개인정보보호정책에 동의합니다." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aJT-H9-aFY">
-                                <rect key="frame" x="77" y="532" width="245.5" height="21"/>
+                                <rect key="frame" x="77" y="597" width="245.5" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="5VB-JB-8xl"/>
                                 </constraints>
@@ -76,14 +76,14 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vvw-Z8-tze">
-                                <rect key="frame" x="53" y="531.5" width="14" height="22"/>
+                                <rect key="frame" x="53" y="596.5" width="14" height="22"/>
                                 <state key="normal" image="signupBtnAgreeUnpick"/>
                                 <connections>
                                     <action selector="checkBoxSelected:" destination="hwN-nk-fcn" eventType="touchUpInside" id="Y4U-Wf-zAY"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sbp-t1-LDM">
-                                <rect key="frame" x="36" y="583" width="303" height="48"/>
+                                <rect key="frame" x="36" y="648" width="303" height="48"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="303" id="QvT-YH-ARn"/>
                                     <constraint firstAttribute="height" constant="48" id="dh8-L2-i6N"/>
